# tappass-examples

./: LICENSE  README.md  SECURITY.md
anthropic/: README.md  main.py
crewai/: README.md  main.py
docker/: README.md  docker-compose.yml
docker/agent/: Dockerfile  main.py
docs/superpowers/plans/: 2026-06-08-openai-ap-governance-demo.md
docs/superpowers/specs/: 2026-06-08-openai-ap-governance-demo-design.md
env-vars/: README.md
fastapi/: README.md  main.py
http-only/: README.md  main.py
kubernetes/: README.md  deployment.yaml
langchain/: README.md  agent.py  main.py
llamaindex/: README.md  main.py
make/: README.md
n8n/: README.md  workflow.json
openai-ap-governance/: .env.example  LIVE-FINDINGS.md  README.md  pyproject.toml
openai-ap-governance/apdemo/: __init__.py  agent.py  catalog.py  cli.py  config.py  guide.py  provision.py  rules.py  scenarios.py  tools.py
openai-ap-governance/tests/: test_agent_helpers.py  test_catalog.py  test_config.py  test_govern.py  test_provision_bodies.py  test_rules.py  test_scenarios.py  test_tools.py
openai-basic/: README.md  main.py
openai-streaming/: README.md  main.py
pipeline/: README.md  regulated.yaml  standard.yaml  starter.yaml
pydantic-ai/: README.md  main.py
zapier/: README.md
