[project]
name = "openai-ap-governance"
version = "0.1.0"
description = "Incremental AP-agent governance demo for TapPass"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
apdemo = "apdemo.cli:main"

[tool.setuptools.packages.find]
include = ["apdemo*"]
